<resources>
    <string name="app_name">Calculator_Assignment</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="Clear">Clear</string>
    <string name="Exponent">^</string>
    <string name="Parentheses">( )</string>
    <string name="Divide">/</string>
    <string name="multiply">X</string>
    <string name="Subtract">-</string>
    <string name="Sum">+</string>
    <string name="plus_Minus">+/-</string>
    <string name="Dot">.</string>
    <string name="Equal">=</string>

    <string name="backspace">DEL</string>

    <string name="Display"> </string>

</resources>
